# rust-protobuf-demo

./: Cargo.toml
api/: Cargo.toml  build.rs
api/src/: lib.rs
backend/: Cargo.toml
backend/src/: lib.rs  main.rs  service_implementation.rs
client/: Cargo.toml
client/src/: main.rs
protobufs/: messages.proto  service.proto
