[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
prost = "^0.11"
prost-types = "^0.11"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tonic = "^0.8"

[build-dependencies]
walkdir = "2"
anyhow = "1.0"
tonic-build = { version = "^0.8", features = ["prost"] }
